fix disabled state jump

--- a/scripts/components/link-edit-component/link-edit-component.scss
+++ b/scripts/components/link-edit-component/link-edit-component.scss
@@ -7,7 +7,8 @@
 			border-radius: 0.25rem !important;
 			width: 100% !important;
 			height: 2.25rem !important;
-			padding: 0.5rem;
+			padding: 0.5rem !important;
+			margin: 0 !important;
 		}
 	}
 }
